revert autoplay change, scrollbar fixes

--- a/public/stylesheets/entrypage.css
+++ b/public/stylesheets/entrypage.css
@@ -1,6 +1,12 @@
 html {
-    overflow: hidden !important;
+    overflow-x:hidden;
+    overflow-y:scroll;
 }
+
+::-webkit-scrollbar { height: 8px; width: 8px; }
+::-webkit-scrollbar-track { background: rgba(0,0,0,0.9); }
+::-webkit-scrollbar-thumb { border-radius: 5px; background: rgba(255, 255, 255, 0.2); }
+::-webkit-scrollbar-thumb:hover { background: rgba(255, 255, 255, 0.3); }
 
 .laurel_completeBG {
     position: absolute;
